2009-07-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance finite difference gradient computaton.
	* include/roboptim/core/finite-difference-gradient.hh:
	Add missing const in checkGradient signature, fix default
	epsilon and threshold.
	* src/finite-difference-gradient.cc: Remove useless
	test in finite difference gradient computation, be
	more strict about allowed epsilon values.
	* tests/finite-difference-gradient.stdout: Regenerate.

2009-07-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Display function's names in Gnuplot.
	* include/roboptim/core/visualization/gnuplot-function.hh:
	Dislay function's name.
	* tests/finite-difference-gradient.stdout,
	* tests/visualization-gnuplot-function.stdout:
	Regenerate.

2009-07-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Use fixed point display for floating-point numbers in Gnuplot.
	* include/roboptim/core/visualization/gnuplot-function.hh:
	Use fixed point display.
	* tests/finite-difference-gradient.stdout,
	* tests/visualization-gnuplot-function.stdout: Regenerate.

2009-07-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Add method to build a discrete interval from an interval and a step.
	* include/roboptim/core/function.hh: Add makeDiscreteInterval
	static method that create a discrete interval from a continuous
	interval and a step.
	* tests/interval.cc: Check new method.
	* tests/interval.stdout: Regenerate.

2009-07-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Check constraints and starting point sizes.
	* include/roboptim/core/problem.hxx: Add assertion
	so that invalid size in a constraint or starting point
	are checked.

2009-07-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Add a safety check in addConstraint.
	* include/roboptim/core/problem.hxx: Check at compile-time
	that added constraint type is valid.

2009-07-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute missing stdout file.
	* tests/Makefile.am: Here.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>
