@@ -1,5 +1,14 @@
 2009-07-23  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Enhance finite difference computation.
+	* include/roboptim/core/finite-difference-gradient.hh:
+	Add BadGradient exception class and add checkGradientAndThrow
+	free function.
+	* src/finite-difference-gradient.cc: Implement new class and free
+	function.
+
+2009-07-23  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Enhance finite difference gradient computaton.
 	* include/roboptim/core/finite-difference-gradient.hh:
 	Add missing const in checkGradient signature, fix default
